# DS5601-NLP-Project

./: .gitignore  README.md  pyproject.toml  run.sh  run_ui.sh
advanced_rag/: __init__.py  cli.py  config.py  main.py
advanced_rag/database/: __init__.py  vector_store.py
advanced_rag/evaluation/: __init__.py  benchmark.py  metrics.py
advanced_rag/llm/: __init__.py  ollama_client.py
advanced_rag/rag/: __init__.py  pipeline.py  reranking_pipeline.py
advanced_rag/retrieval/: __init__.py  pdf_retrieval.py  reranker.py  web_retrieval.py
advanced_rag/ui/: __init__.py  api.py
advanced_rag/ui/templates/: index.html
advanced_rag/utils/: __init__.py  cache_manager.py  logging_utils.py  text_processor.py
notebooks/: base.ipynb
